infrastructure/cilium/coredns-lan-service.yaml
# LAN-facing LoadBalancer Service for CoreDNS
apiVersion: v1
kind: Service
metadata:
  name: coredns-external
  namespace: kube-system
  annotations:
    lbipam.cilium.io/ips: "${COREDNS_LAN_IP}"
spec:
  type: LoadBalancer
  selector:
    k8s-app: kube-dns
  ports:
    - name: dns
      port: 53
      protocol: UDP
      targetPort: 53
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
