infrastructure/cilium/k3s-components-networkpolicy.yaml
# Policies for components k3s bundles into kube-system
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: metrics-server-egress
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s-app: metrics-server
  egress:
    # Kubelet metrics
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
